Fix Makefile defaults and restore system link

--- a/bcplkit-0.9.7/src/Makefile
+++ b/bcplkit-0.9.7/src/Makefile
@@ -15,13 +15,13 @@ BINDIR ?= $(OBJDIR)
 
 CFLAGS += -m$(BITS) -std=c11 -DBITS$(BITS)
 AFLAGS += --$(BITS)
-LDFLAGS += -m $(if $(filter 64,$(BITS)),elf_x86_64,elf_i386)
-CFLAGS += -m$(ARCHBITS) -std=c23
-AFLAGS += --$(ARCHBITS)
-ifeq ($(ARCHBITS),64)
+
+ifeq ($(BITS),64)
 AFLAGS += --defsym X86_64=1
 endif
-LDFLAGS += -m $(if $(filter 64,$(ARCHBITS)),elf_x86_64,elf_i386)
+LDFLAGS += -m $(if $(filter 64,$(BITS)),elf_x86_64,elf_i386)
+
+.DEFAULT_GOAL := all
 
 
 O := $(OBJDIR)
